# vision_detect

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  armor_detect.cpp  armor_detect_node.cpp  circle_detect.cpp  circle_detect.hpp  detect_HQG.hpp  digital_classification.cpp  kohill.h  main.cpp  package.xml  rectang_det_HQG.cpp  rune_detect_node.cpp
include/vision_unit/detect_factory/: armor_detect.h  armor_detect_node.h
launch/: armor_detect.launch~
src/detect_factory/: armor_detect.cpp  armor_detect_node.cpp  circle_detect.cpp  circle_detect.hpp  detect_HQG.hpp  digital_classification.cpp  digital_classification.hpp  draw.cpp  kohill.h  main.cpp  mouse_draw.cpp  mouse_draw.hpp  rectang_det_HQG.cpp  util.cpp
src/detect_factory/detect_res/: AreaRect.py  trainAndTest.py
src/detect_factory/txt/: x2.txt  x3.txt  x4.txt  x5.txt  y2.txt  y3.txt  y4.txt  y5.txt
